# cern-thesis

./: .gitignore  README.md  TODO.md  TODO_RECO.md  ideas.md
.github/workflows/: build.yaml
references/: README.md
scripts/: activate.sh  activate_and_run.sh
scripts/4d-tracking/: Snakefile  plot_event.py  plot_grid.py
scripts/acts-introduction/: README.md  Snakefile  plot_odd_hits.py  plot_odd_layout.py  plot_odd_material.py
scripts/acts-itk-performance/: README.md  run_default_legacy_vs_acts.sh
scripts/acts-odd-performance/: README.md  Snakefile  config.yaml  detector_scan.py  plot_ambi_duplication_ttbar.py  plot_ambi_efficiency_ttbar.py  plot_cpu_alg_ttbar.py  plot_cpu_total_ttbar.py  plot_detector_efficiency_mixed.py  plot_detector_material.py  plot_finding_duplication.py  plot_finding_efficiency_mixed.py  plot_finding_efficiency_mu.py  plot_finding_efficiency_ttbar.py  plot_finding_efficiency_ttbar_pileup.py  simulation.py  (+19 more)
scripts/dense-propagation/geant4/cpp/: CMakeLists.txt  run_chart_eloss.cpp  run_chart_msc_eloss.cpp  run_logscale_momentum.cpp  run_print_material.cpp  run_print_physics_list.cpp  run_single_momentum.cpp  run_visualisation.cpp  vis.mac
scripts/dense-propagation/geant4/cpp/src/: MyActionInitialization.hpp  MyDetectorConstruction.hpp  MyEventAction.hpp  MyLogActionInitialization.hpp  MyLogPrimaryGeneratorAction.hpp  MyPhysicsList.hpp  MyPrimaryGeneratorAction.hpp  MyRunAction.hpp  MySensitiveDetector.hpp  MySteppingAction.hpp  MyTrackerHit.hpp
thesis/: .gitignore  header.tex  references.bib  thesis.tex  titelblatt.tex  titlepage.tex
(+193 files in other folders)
